fixing copy size on mobile view

--- a/public/css/digitalx.css
+++ b/public/css/digitalx.css
@@ -162,6 +162,24 @@ p.lead {
     }
 }
 
-@media (max-width: 480px) and (orientation: landscape) {
-  
+@media (max-width: 480px) {
+    #logo-img {
+        width:150px;
+    } 
+    h1,
+    h1.blue {
+        font-size:30px
+    }
+    #banner #main_heading {
+        padding-top:20px
+    }
+    #banner #main_heading h1 {
+        font-size:30px
+    }
+    #banner #sub_heading h2 {
+        font-size: 24px
+    }
+    #banner #sub_heading {
+        padding-top: 20px
+    }
 }
